# beans-stalk

./: .gitignore  pyproject.toml
.beans/: .gitignore
docs/superpowers/plans/: 2026-03-19-beans-stalk.md  2026-03-20-drill-down-and-pulsing.md  2026-03-21-pluggable-layout-algorithms.md  2026-03-22-dag-direction.md  2026-03-22-delete-ready-childcount.md  2026-03-27-macos-app-bundle.md
docs/superpowers/specs/: 2026-03-19-beans-stalk-design.md  2026-03-20-drill-down-and-pulsing-design.md  2026-03-21-pluggable-layout-algorithms-design.md  2026-03-21-viewport-persistence-design.md  2026-03-22-dag-direction-design.md  2026-03-22-delete-ready-childcount-design.md  2026-03-27-macos-app-bundle-design.md
resources/: icon.acorn
scripts/: build_app.sh  render_layout.py
src/beans_stalk/: __init__.py  app.py  config.py  main.py
src/beans_stalk/data/: store.py  watcher.py
src/beans_stalk/graph/: layout.py
src/beans_stalk/graph/layouts/: __init__.py  _graphviz_dot.py  _sugiyama.py  _sugiyama_compact.py
src/beans_stalk/ui/: bean_node.py  breadcrumb.py  dag_scene.py  dag_view.py  dep_edge.py  main_window.py  sidebar.py
tests/: conftest.py  test_bean_node.py  test_breadcrumb.py  test_config.py  test_dag_scene.py  test_dag_view.py  test_dep_edge.py  test_drill_down.py  test_integration.py  test_ipc.py  test_layout.py  test_layout_providers.py  test_main_window.py  test_sidebar.py  test_store.py  test_watcher.py
